# pid_control_hot_metal_plate

pid_ctrl/: CMakeLists.txt  pid_ctrl.cpp  web_references.txt
pid_ctrl/pid_lib/: CMakeLists.txt  PID_v1.cpp
switching/: switching.kicad_prl  switching.kicad_pro  switching.kicad_sch
thermo_arduino/: thermo_arduino.ino
